spacing fixed. About added to landing page.

--- a/styles/app.scss
+++ b/styles/app.scss
@@ -175,8 +175,13 @@ img {
 
 .aboutPage {
 	.aboutContents {
+		width: 572px;
 		display: flex;
 		flex-direction: column;
+		margin: 53px auto 0;
+    padding-top: 30px;
+    padding-left: 32px;
+    padding-right: 32px;
 		img {
 			margin: auto;
 		}
